--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <title>Unimar Simples</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <header>
 
@@ -12,9 +14,11 @@
 
     <nav>
       <button onclick="mostrarSecao('presencial')">Presencial</button>
+
       <button onclick="mostrarSecao('ead')">EAD</button>
       <button onclick="mostrarSecao('areaAluno')">Área do Aluno</button>
       <button onclick="mostrarSecao('vestibular')">Vestibular</button>
+      <button onclick="mostrarSecao('noticias')">Notícias</button>
     </nav>
 
   </header>
@@ -26,23 +30,15 @@
     </section>
   </main>
 
-  <footer>
-    <p>Unimar – Marília, SP | (14) 2105‑4000 | falecom@unimar.br</p>
-  </footer>
-
-
-  <section class="localizacao">
-  <h2> Nossa Localização - UNIMAR</h2>
-  <iframe
-    class="mapa"
-    src="https://www.google.com/maps?q=-22.2367935,-49.9664573&z=15&output=embed"
-    allowfullscreen=""
-    loading="lazy"
-    referrerpolicy="no-referrer-when-downgrade">
-  </iframe>
-</section>
+  <section class="location">
+    <h2> Nossa Localização - UNIMAR</h2>
+    <iframe class="mapa" src="https://www.google.com/maps?q=-22.2367935,-49.9664573&z=15&output=embed"
+      allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+  </section>
 
 
   <script src="script.js"></script>
 </body>
+
 </html>
