--- a/index.html
+++ b/index.html
@@ -30,12 +30,66 @@
     </section>
   </main>
 
+
+  <!-- Seção de cursos presenciais -->
+  <section id="presencial" class="section active">
+    <h2>Cursos Presenciais</h2>
+    <div class="cards">
+
+
+      <div class="card">
+
+        <h3>Cursos de Graduação</h3>
+        <img src="imagens/foto_p2_parque-tec-unimar-1-scaled.jpg">
+
+        <p>Construa seu futuro na UNIMAR! Professores qualificados, 
+          laboratórios modernos e atividades que unem teoria e prática. 
+          Aqui você vive a verdadeira experiência universitária e sai preparado para o mercado.
+        </p>
+
+        <a href="https://oficial.unimar.br/cursos/" class="btn">Ver
+          Mais</a>
+      </div>
+
+    </div>
+    <div class="card">
+      <h3>Cursos de Pós-Graduação</h3>
+
+      <p>Na UNIMAR, sua carreira ganha força! Cursos presenciais que oferecem networking,
+         inovação e prática avançada, impulsionando você para novos desafios e conquistas profissionais.</p>
+
+      <button>Ver Mais</button>
+    </div>
+
+
+    <div class="card">
+      <h3>Bacharelado em Inteligência Artificial</h3>
+
+      <p>Comece sua trajetória profissional com a UNIMAR! Formação rápida, 
+        prática e voltada ao mercado, com infraestrutura moderna e apoio de especialistas para transformar aprendizado em oportunidade.</p>
+
+      <button>Ver Mais</button>
+    </div>
+    
+    </div>
+  </section>
+
+
+
+
   <section class="location">
     <h2> Nossa Localização - UNIMAR</h2>
     <iframe class="mapa" src="https://www.google.com/maps?q=-22.2367935,-49.9664573&z=15&output=embed"
       allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
     </iframe>
   </section>
+
+
+
+
+
+
+
 
 
   <script src="script.js"></script>
