--- a/index.html
+++ b/index.html
@@ -23,74 +23,95 @@
 
   </header>
 
+
   <main>
-    <section id="conteudo">
-      <h2>Bem-vindo à Unimar</h2>
-      <p>Escolha uma das opções acima para saber mais.</p>
-    </section>
-  </main>
-
-
-  <!-- Seção de cursos presenciais -->
-  <section id="presencial" class="section active">
-    <h2>Cursos Presenciais</h2>
-    <div class="cards">
+    <!-- Seção Presencial -->
+    <section id="presencial" class="secao active"> <!-- 🔵 já começa aberta -->
+      <div class="card">
+        <h3>Graduação</h3>
+        <img src="imagens/foto_p2_parque-tec-unimar-1-scaled.jpg">
+        <p>Construa seu futuro na UNIMAR! Professores qualificados e atividades que unem teoria e prática.</p>
+        <a href="https://oficial.unimar.br/cursos/" class="btn">Ver Mais</a>
+      </div>
 
 
       <div class="card">
-
-        <h3>Cursos de Graduação</h3>
-        <img src="imagens/foto_p2_parque-tec-unimar-1-scaled.jpg">
-
-        <p>Construa seu futuro na UNIMAR! Professores qualificados, 
-          laboratórios modernos e atividades que unem teoria e prática. 
-          Aqui você vive a verdadeira experiência universitária e sai preparado para o mercado.
-        </p>
-
-        <a href="https://oficial.unimar.br/cursos/" class="btn">Ver
-          Mais</a>
+        <h3>Pós-Graduação</h3>
+        <img src="imagens/medicina-4-1024x683.jpg">
+        <p>Networking, inovação e prática avançada para sua carreira.</p>
+        <a href="https://oficial.unimar.br/pos/" class="btn">Ver Mais</a>
       </div>
 
-    </div>
-    <div class="card">
-      <h3>Cursos de Pós-Graduação</h3>
 
-      <p>Na UNIMAR, sua carreira ganha força! Cursos presenciais que oferecem networking,
-         inovação e prática avançada, impulsionando você para novos desafios e conquistas profissionais.</p>
+      <div class="card">
+        <h3>Cursos Técnicos</h3>
+        <img src="imagens/enf.jpg">
+        <p>Formação rápida, prática e voltada ao mercado de trabalho.</p>
+        <a href="https://oficial.unimar.br/cursos-tecnicos/" class="btn">Ver Mais</a>
+      </div>
+    </section>
 
-      <button>Ver Mais</button>
-    </div>
-
-
-    <div class="card">
-      <h3>Bacharelado em Inteligência Artificial</h3>
-
-      <p>Comece sua trajetória profissional com a UNIMAR! Formação rápida, 
-        prática e voltada ao mercado, com infraestrutura moderna e apoio de especialistas para transformar aprendizado em oportunidade.</p>
-
-      <button>Ver Mais</button>
-    </div>
-    
-    </div>
-  </section>
+    <!-- Seção EAD -->
+    <section id="ead" class="secao">
 
 
 
 
+      <div class="card">
+        <h3>Graduação</h3>
+        <img src="imagens/engenharia-da-computacao.jpg">
+        <p>Estude onde estiver com a qualidade da UNIMAR! Flexibilidade,
+           aulas online dinâmicas e suporte acadêmico para você conquistar seu diploma sem abrir mão da rotina</p>
+        <a href="https://ead.unimar.br/cursos/" class="btn">Ver Mais</a>
+      </div>
+
+
+      <div class="card">
+        <h3>Pós-Graduação</h3>
+        <img src="imagens/analise-e-desenvolvimento-de-sistemas.jpg">
+        <p>Dê um passo a mais na sua carreira com os cursos de pós-graduação da UNIMAR! Networking,
+           inovação e prática avançada para transformar desafios em conquistas profissionais.</p>
+        <a href="https://ead.unimar.br/pos/" class="btn">Ver Mais</a>
+      </div>
+
+
+      <div class="card">
+        <h3>Cursos de extensão</h3>
+        <img src="imagens/Imagem_Bullets_e5afc9711b.webp">
+        <p>Amplie seus conhecimentos com os cursos de extensão da UNIMAR! Formação rápida, 
+          prática e focada em áreas específicas para complementar sua graduação ou impulsionar sua carreira.</p>
+        <a href="https://ead.unimar.br/cursos-de-extensao/" class="btn">Ver Mais</a>
+      </div>
+
+
+    </section>
+
+
+    <!-- Seção Vestibular -->
+    <section id="vestibular" class="secao">
+      <div class="card">
+        <h3>Vestibular</h3>
+        <img src="imagens/vestibular.jpg">
+        <p>Inscreva-se e garanta sua vaga na Unimar.</p>
+      </div>
+    </section>
+
+    <!-- Seção Notícias -->
+    <section id="noticias" class="secao">
+      <div class="card">
+        <h3>Notícias</h3>
+        <img src="imagens/noticia.jpg">
+        <p>Confira as últimas novidades da Unimar.</p>
+      </div>
+    </section>
+  </main>
+
+  
   <section class="location">
-    <h2> Nossa Localização - UNIMAR</h2>
+    <h2>Nossa Localização - UNIMAR</h2>
     <iframe class="mapa" src="https://www.google.com/maps?q=-22.2367935,-49.9664573&z=15&output=embed"
-      allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
+      allowfullscreen="" loading="lazy"></iframe>
   </section>
-
-
-
-
-
-
-
-
 
   <script src="script.js"></script>
 </body>
