--- a/index.html
+++ b/index.html
@@ -14,19 +14,22 @@
 
     <nav>
       <button onclick="mostrarSecao('presencial')">Presencial</button>
-
       <button onclick="mostrarSecao('ead')">EAD</button>
-      <button onclick="mostrarSecao('areaAluno')">Área do Aluno</button>
       <button onclick="mostrarSecao('vestibular')">Vestibular</button>
       <button onclick="mostrarSecao('noticias')">Notícias</button>
     </nav>
 
   </header>
 
+  <!--<button onclick="lerTexto()">🔊 Ler em voz alta</button>
+<p id="conteudo">
+  Bem-vindo ao nosso site! Aqui você encontra informações claras e acessíveis.
+</p>-->
+
 
   <main>
-    <!-- Seção Presencial -->
-    <section id="presencial" class="secao active"> <!-- 🔵 já começa aberta -->
+    <!--  Presencial -->
+    <section id="presencial" class="secao active"> <!--já começa aberta --> 
       <div class="card">
         <h3>Graduação</h3>
         <img src="imagens/foto_p2_parque-tec-unimar-1-scaled.jpg">
@@ -51,7 +54,7 @@
       </div>
     </section>
 
-    <!-- Seção EAD -->
+    <!-- EAD -->
     <section id="ead" class="secao">
 
 
@@ -87,16 +90,19 @@
     </section>
 
 
-    <!-- Seção Vestibular -->
+    <!--  Vestibular -->
     <section id="vestibular" class="secao">
       <div class="card">
         <h3>Vestibular</h3>
-        <img src="imagens/vestibular.jpg">
+        <img src="imagens/noticiasconcursos.com.br-unimar-encerra-inscricoes-para-o-vestibular-de-medicina-2024-unimar.2.webp">
         <p>Inscreva-se e garanta sua vaga na Unimar.</p>
+
+        <a href="https://oficial.unimar.br/vestibular/?_gl=1*1t5w6gd*_gcl_au*MTY4Njk2MDczOC4xNzU2OTM2NTYw*_ga*NzQ2MDM4MTMzLjE3NTY5MzY1NjA.
+        *_ga_BJYL5VF959*czE3NTY5MzY1NjAkbzEkZzEkdDE3NTY5MzY4OTMkajYwJGwwJGgxNDc3NjA5ODU5*_ga_9KXXC35VJK*czE3NTY5MzY1NjAkbzEkZzEkdDE3NTY5MzY4OTMkajYwJGwwJGgw" class="btn">Inscreva-se</a>
       </div>
     </section>
 
-    <!-- Seção Notícias -->
+    <!-- Notícias -->
     <section id="noticias" class="secao">
       <div class="card">
         <h3>Notícias</h3>
@@ -106,14 +112,25 @@
     </section>
   </main>
 
+
+  
+
   
   <section class="location">
     <h2>Nossa Localização - UNIMAR</h2>
-    <iframe class="mapa" src="https://www.google.com/maps?q=-22.2367935,-49.9664573&z=15&output=embed"
-      allowfullscreen="" loading="lazy"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d652.8517632832214!2d-49.966546869343254!3d-22.23676732961272!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94bfd7710bfa340b%3A0xaa8d32096bc6676b!2sUNIMAR%20-%20Universidade%20de%20Mar%C3%ADlia!5e0!3m2!1spt-BR!2sbr!4v1756936693696!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </section>
 
   <script src="script.js"></script>
 </body>
 
+
+
 </html>
+
+
+
+
+
+
+<!--https://youtu.be/kNMzREyGDbs?si=F8opQp6aPpBDdFIP-->
