--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
 
   </header>
 
-  <!--<button onclick="lerTexto()">🔊 Ler em voz alta</button>
-<p id="conteudo">
-  Bem-vindo ao nosso site! Aqui você encontra informações claras e acessíveis.
-</p>-->
+  <div class="linha-custom"></div>
 
 
   <main>
+
     <!--  Presencial -->
-    <section id="presencial" class="secao active"> <!--já começa aberta --> 
+    <section id="presencial" class="secao active"> <!--já começa aberta -->
+
       <div class="card">
         <h3>Graduação</h3>
         <img src="imagens/foto_p2_parque-tec-unimar-1-scaled.jpg">
@@ -57,14 +56,11 @@
     <!-- EAD -->
     <section id="ead" class="secao">
 
-
-
-
       <div class="card">
         <h3>Graduação</h3>
         <img src="imagens/engenharia-da-computacao.jpg">
         <p>Estude onde estiver com a qualidade da UNIMAR! Flexibilidade,
-           aulas online dinâmicas e suporte acadêmico para você conquistar seu diploma sem abrir mão da rotina</p>
+          aulas online dinâmicas e suporte acadêmico para você conquistar seu diploma sem abrir mão da rotina</p>
         <a href="https://ead.unimar.br/cursos/" class="btn">Ver Mais</a>
       </div>
 
@@ -73,7 +69,7 @@
         <h3>Pós-Graduação</h3>
         <img src="imagens/analise-e-desenvolvimento-de-sistemas.jpg">
         <p>Dê um passo a mais na sua carreira com os cursos de pós-graduação da UNIMAR! Networking,
-           inovação e prática avançada para transformar desafios em conquistas profissionais.</p>
+          inovação e prática avançada para transformar desafios em conquistas profissionais.</p>
         <a href="https://ead.unimar.br/pos/" class="btn">Ver Mais</a>
       </div>
 
@@ -81,7 +77,7 @@
       <div class="card">
         <h3>Cursos de extensão</h3>
         <img src="imagens/Imagem_Bullets_e5afc9711b.webp">
-        <p>Amplie seus conhecimentos com os cursos de extensão da UNIMAR! Formação rápida, 
+        <p>Amplie seus conhecimentos com os cursos de extensão da UNIMAR! Formação rápida,
           prática e focada em áreas específicas para complementar sua graduação ou impulsionar sua carreira.</p>
         <a href="https://ead.unimar.br/cursos-de-extensao/" class="btn">Ver Mais</a>
       </div>
@@ -94,32 +90,60 @@
     <section id="vestibular" class="secao">
       <div class="card">
         <h3>Vestibular</h3>
-        <img src="imagens/noticiasconcursos.com.br-unimar-encerra-inscricoes-para-o-vestibular-de-medicina-2024-unimar.2.webp">
+        <img
+          src="imagens/noticiasconcursos.com.br-unimar-encerra-inscricoes-para-o-vestibular-de-medicina-2024-unimar.2.webp">
         <p>Inscreva-se e garanta sua vaga na Unimar.</p>
 
         <a href="https://oficial.unimar.br/vestibular/?_gl=1*1t5w6gd*_gcl_au*MTY4Njk2MDczOC4xNzU2OTM2NTYw*_ga*NzQ2MDM4MTMzLjE3NTY5MzY1NjA.
-        *_ga_BJYL5VF959*czE3NTY5MzY1NjAkbzEkZzEkdDE3NTY5MzY4OTMkajYwJGwwJGgxNDc3NjA5ODU5*_ga_9KXXC35VJK*czE3NTY5MzY1NjAkbzEkZzEkdDE3NTY5MzY4OTMkajYwJGwwJGgw" class="btn">Inscreva-se</a>
+        *_ga_BJYL5VF959*czE3NTY5MzY1NjAkbzEkZzEkdDE3NTY5MzY4OTMkajYwJGwwJGgxNDc3NjA5ODU5*_ga_9KXXC35VJK*czE3NTY5MzY1NjAkbzEkZzEkdDE3NTY5MzY4OTMkajYwJGwwJGgw"
+          class="btn">Inscreva-se</a>
       </div>
+
+
     </section>
 
     <!-- Notícias -->
     <section id="noticias" class="secao">
-      <div class="card">
-        <h3>Notícias</h3>
-        <img src="imagens/noticia.jpg">
-        <p>Confira as últimas novidades da Unimar.</p>
+
+      <div class="noticia">
+        <img src="imagens/unimar_tech_summit.jpg" alt="Unimar Tech Summit">
+        <div class="overlay">
+          <h3>Unimar Tech Summit</h3>
+          <p>Maior evento de tecnologia e inovação da Unimar em Marília.</p>
+          <a href="https://lets.4.events/unimar-tech-summit-2025-C11575E131">Confira</a>
+        </div>
       </div>
+
+        <div class="noticia">
+          <img src="imagens/tec_unimar.jpg" alt="Parque Tecnológico TecUnimar">
+          <div class="overlay">
+            <h3>TecUnimar: Parque Tecnológico</h3>
+            <p>Inauguração do primeiro Parque Tecnológico de Marília.</p>
+            <a href="https://tec.unimar.br/">Confira</a>
+          </div>
+        </div>
+
     </section>
   </main>
 
+  <div class=" linha-custom">
+  </div>
 
-  
-
-  
   <section class="location">
-    <h2>Nossa Localização - UNIMAR</h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d652.8517632832214!2d-49.966546869343254!3d-22.23676732961272!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94bfd7710bfa340b%3A0xaa8d32096bc6676b!2sUNIMAR%20-%20Universidade%20de%20Mar%C3%ADlia!5e0!3m2!1spt-BR!2sbr!4v1756936693696!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <h2>Localização - UNIMAR</h2>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d652.8517632832214!2d-49.966546869343254!3d-22.
+      23676732961272!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94bfd7710bfa340b%3A0xaa8d32096bc6676b!2sUNIMAR%20-
+      %20Universidade%20de%20Mar%C3%ADlia!5e0!3m2!1spt-BR!2sbr!4v1756936693696!5m2!1spt-BR!2sbr" width="400"
+      height="300" style="border:0;" allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"></iframe>
+
   </section>
+
+
+  <footer>
+    <p>&copy; 2025 UNIMAR - Todos os direitos reservados.</p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
@@ -127,8 +151,6 @@
 
 
 </html>
-
-
 
 
 
