--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Unimar Simples</title>
+
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <header>
 
-    <img src="imagens/logo.svg">
+    <a href="https://youtu.be/kNMzREyGDbs?si=jYFQAXE0P-nWS09A" target="_blank">
+      <img class="Logo" id="Logo" src="imagens/logo.svg" alt="LogoUnimar">
+    </a>
 
     <nav>
       <button onclick="mostrarSecao('presencial')">Presencial</button>
@@ -34,7 +37,7 @@
         <h3>Graduação</h3>
 
 
-        <p>Construa seu futuro na UNIMAR! Professores qualificados e atividades que unem teoria e prática.</p>
+        <p> Professores qualificados e atividades que unem teoria e prática.</p>
         <a href="https://oficial.unimar.br/cursos/" class="btn">Ver Mais</a>
       </div>
 
@@ -64,8 +67,8 @@
         <img src="imagens/engenharia-da-computacao.jpg">
         <h3>Graduação</h3>
 
-        <p>Estude onde estiver com a qualidade da UNIMAR! Flexibilidade,
-          aulas online dinâmicas e suporte acadêmico para você conquistar seu diploma sem abrir mão da rotina</p>
+        <p> Flexibilidade, aulas online dinâmicas e suporte acadêmico
+           para você conquistar seu diploma sem abrir mão da rotina com estudos de qualidade.</p>
         <a href="https://ead.unimar.br/cursos/" class="btn">Ver Mais</a>
       </div>
 
@@ -74,8 +77,7 @@
         <img src="imagens/analise-e-desenvolvimento-de-sistemas.jpg">
         <h3>Pós-Graduação</h3>
 
-        <p>Dê um passo a mais na sua carreira com os cursos de pós-graduação da UNIMAR! Networking,
-          inovação e prática avançada para transformar desafios em conquistas profissionais.</p>
+        <p> Networking, inovação e prática avançada para transformar desafios em conquistas profissionais.</p>
         <a href="https://ead.unimar.br/pos/" class="btn">Ver Mais</a>
       </div>
 
@@ -84,7 +86,7 @@
         <img src="imagens/Imagem_Bullets_e5afc9711b.webp">
         <h3>Cursos de extensão</h3>
 
-        <p>Amplie seus conhecimentos com os cursos de extensão da UNIMAR! Formação rápida,
+        <p> Formação rápida,
           prática e focada em áreas específicas para complementar sua graduação ou impulsionar sua carreira.</p>
         <a href="https://ead.unimar.br/cursos-de-extensao/" class="btn">Ver Mais</a>
       </div>
@@ -95,10 +97,16 @@
 
     <!--  Vestibular -->
     <section id="vestibular" class="secao">
-      <div>
-        <img src="imagens/desktop-1-1.jpg" class="vestibular-img">
-        
+      <div class="vestibular-controls">
+        <button class="vestibular-arrow" id="prevVest">&#8592;</button>
+        <a href="https://oficial.unimar.br/vestibular/#inscricoes" target="_blank">
+          <img class="vestibular-img" id="vestibularImg" src="imagens/desktop-1-1.jpg" alt="Vestibular">
+        </a>
+        <button class="vestibular-arrow" id="nextVest">&#8594;</button>
       </div>
+
+
+
     </section>
 
     <!-- Notícias -->
@@ -150,8 +158,3 @@
 
 
 </html>
-
-
-
-
-<!--https://youtu.be/kNMzREyGDbs?si=F8opQp6aPpBDdFIP-->
