--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Unimar Simples</title>
+  <title>Unimar-informações</title>
 
   <link rel="stylesheet" href="styles.css">
 </head>
