--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
   <meta charset="UTF-8">
+  <link rel="shortcut icon" href="imagens/images-removebg-preview.png" type="image/x-icon">
   <title>Unimar-informações</title>
-
   <link rel="stylesheet" href="styles.css">
 </head>
 
