ajuste de pagina (finalizado)

--- a/sengundo/index.html
+++ b/sengundo/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" href="imagens/images-removebg-preview.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../imagens/images-removebg-preview.png" type="image/x-icon">
   <title>Unimar-informações</title>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,7 +11,7 @@
   <header>
 
     <a href="https://youtu.be/kNMzREyGDbs?si=jYFQAXE0P-nWS09A" target="_blank">
-      <img class="Logo" id="Logo" src="imagens/logo.svg" alt="LogoUnimar">
+      <img class="Logo" id="Logo" src="../imagens/logo.svg" alt="LogoUnimar">
     </a>
 
     <nav>
@@ -32,7 +32,7 @@
     <section id="presencial" class="secao active"> <!--já começa aberta -->
 
       <div class="card">
-        <img src="imagens/foto_p2_parque-tec-unimar-1-scaled.jpg">
+        <img src="../imagens/foto_p2_parque-tec-unimar-1-scaled.jpg">
         <h3>Graduação</h3>
 
 
@@ -42,7 +42,7 @@
 
 
       <div class="card">
-        <img src="imagens/medicina-4-1024x683.jpg">
+        <img src="../imagens/medicina-4-1024x683.jpg">
         <h3>Pós-Graduação</h3>
 
         <p>Networking, inovação e prática avançada para sua carreira.</p>
@@ -51,7 +51,7 @@
 
 
       <div class="card">
-        <img src="imagens/enf.jpg">
+        <img src="../imagens/enf.jpg">
         <h3>Cursos Técnicos</h3>
 
         <p>Formação rápida, prática e voltada ao mercado de trabalho.</p>
@@ -63,7 +63,7 @@
     <section id="ead" class="secao">
 
       <div class="card">
-        <img src="imagens/engenharia-da-computacao.jpg">
+        <img src="../imagens/engenharia-da-computacao.jpg">
         <h3>Graduação</h3>
 
         <p> Flexibilidade, aulas online dinâmicas e suporte acadêmico
@@ -73,7 +73,7 @@
 
 
       <div class="card">
-        <img src="imagens/analise-e-desenvolvimento-de-sistemas.jpg">
+        <img src="../imagens/analise-e-desenvolvimento-de-sistemas.jpg">
         <h3>Pós-Graduação</h3>
 
         <p> Networking, inovação e prática avançada para transformar desafios em conquistas profissionais.</p>
@@ -82,7 +82,7 @@
 
 
       <div class="card">
-        <img src="imagens/Imagem_Bullets_e5afc9711b.webp">
+        <img src="../imagens/Imagem_Bullets_e5afc9711b.webp">
         <h3>Cursos de extensão</h3>
 
         <p> Formação rápida,
@@ -99,7 +99,7 @@
       <div class="vestibular-controls">
         <button class="vestibular-arrow" id="prevVest">&#8592;</button>
         <a href="https://oficial.unimar.br/vestibular/#inscricoes" target="_blank">
-          <img class="vestibular-img" id="vestibularImg" src="imagens/desktop-1-1.jpg" alt="Vestibular">
+          <img class="vestibular-img" id="vestibularImg" src="../imagens/desktop-1-1.jpg" alt="Vestibular">
         </a>
         <button class="vestibular-arrow" id="nextVest">&#8594;</button>
       </div>
@@ -112,7 +112,7 @@
     <section id="noticias" class="secao">
 
       <div class="noticia">
-        <img src="imagens/unimar_tech_summit.jpg" alt="Unimar Tech Summit">
+        <img src="../imagens/unimar_tech_summit.jpg" alt="Unimar Tech Summit">
         <div class="overlay">
           <h3>Unimar Tech Summit</h3>
           <p>Maior evento de tecnologia e inovação da Unimar em Marília.</p>
@@ -121,7 +121,7 @@
       </div>
 
       <div class="noticia">
-        <img src="imagens/tec_unimar.jpg" alt="Parque Tecnológico TecUnimar">
+        <img src="../imagens/tec_unimar.jpg" alt="Parque Tecnológico TecUnimar">
         <div class="overlay">
           <h3>TecUnimar: Parque Tecnológico</h3>
           <p>Inauguração do primeiro Parque Tecnológico de Marília.</p>
